@@ -118,7 +118,7 @@ class OtakuBrowser(BrowserBase):
             }
             items = [utils.allocate_item(title, 'null', info=info, poster=kodi_meta['poster'])]
 
-        elif control.getSetting("general.unaired.playlists") == 'true':
+        else:
             episodes = database.get_episode_list(anilist_id)
             items = simkl.SIMKLAPI()._process_episodes(episodes, '') if episodes else []
 
@@ -128,19 +128,6 @@ class OtakuBrowser(BrowserBase):
                          if x.get('info').get('aired')
                          and time.strptime(x.get('info').get('aired'), '%Y-%m-%d') < time.localtime()]
 
-            playlist = control.bulk_draw_items(items)[pass_idx:]
-            if len(playlist) > int(control.getSetting('general.playlist_length')):
-                playlist = playlist[:int(control.getSetting('general.playlist_length'))]
-
-            for i in playlist:
-                url = i[0]
-                if filter_lang:
-                    url += filter_lang
-                control.playList.add(url=url, listitem=i[1])
-
-        else:
-            episodes = database.get_episode_list(anilist_id)
-            items = simkl.SIMKLAPI()._process_episodes(episodes, '') if episodes else []
             playlist = control.bulk_draw_items(items)[pass_idx:]
             if len(playlist) > int(control.getSetting('general.playlist_length')):
                 playlist = playlist[:int(control.getSetting('general.playlist_length'))]
