@@ -1,3 +1,6 @@
+Changelog 0.4.35 [20231009]:
+- Remove Setting "Hide Unaired Episodes in Playlist"
+
 Changelog 0.4.34 [20231009]:
 - Fixed Unaired Episodes Setting
 - Added New Setting "Hide Unaired Episodes in Playlist"
